// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`B.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./C');

=====================================output=====================================
require("./C");

================================================================================
`;

exports[`C.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./D');
require('./E');
require('./F');
require('./G');

=====================================output=====================================
require("./D");
require("./E");
require("./F");
require("./G");

================================================================================
`;

exports[`D.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`E.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./I');

=====================================output=====================================
require("./I");

================================================================================
`;

exports[`F.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`G.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./H');

=====================================output=====================================
require("./H");

================================================================================
`;

exports[`H.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// empty

=====================================output=====================================
// empty

================================================================================
`;

exports[`I.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
require('./A');

=====================================output=====================================
require("./A");

================================================================================
`;
